# MindCLI

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: index.html  style.css
src/mindcli/: ai_engine.py  chat_manager.py  config.py  config_manager.py  file_handler.py  main.py  memory_manager.py  model_manager.py  ollama_utils.py  state.py  ui.py  utils.py  web_search.py
src/mindcli/assets/: MindCLI_HELP.txt
src/mindcli/cmd/: mincli.cmd
src/mindcli/configs/: hardware.json  paths.json  tavily_API.json
