[project]
name = "MindCLI"
version = "2.0"
description = "MindCLI is a command-line interface tool for interacting with AI models via Ollama"
authors = [{name = "LDM Dev"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "ollama",
    "pyfiglet",
    "pyperclip",
    "pypdf",
    "tavily-python",
    "python-docx",
    "openpyxl"
]

[project.urls]
Website = "https://lorydima.github.io/MindCLI/"
Repository = "https://github.com/Lorydima/MindCLI"

[tool.setuptools]
packages = ["src.mindcli"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
